--- a/packages/broom/package.json
+++ b/packages/broom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vividcat/broom",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A collection of configuration files containing prettier, eslint, stylelint",
   "keywords": [
     "eslint",
@@ -10,6 +10,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/vividcat/broom.git"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "license": "MIT",
   "author": "vividcat",
@@ -24,7 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "@vividcat/eslint-config": "^1.0.2",
-    "@vividcat/eslint-config-typescript": "^1.0.2",
+    "@vividcat/eslint-config-typescript": "^1.0.3",
     "eslint": "^7.0.0",
     "fast-glob": "^3.2.4",
     "prettier": "^2.3.2",
@@ -35,5 +38,6 @@
     "stylelint-config-standard": "^20.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.1.0",
     "typescript": "^4.3.5"
-  }
+  },
+  "gitHead": "68295e89a688bba3f7467fca91dee4fa51ff1b26"
 }
