兼容 eslint 低版本

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -18,6 +18,6 @@
     "eslint": "^7.0.0||^8.0.0"
   },
   "peerDependencies": {
-    "eslint": ">=7.0.0 || >=8.0.0"
+    "eslint": ">=1.6.0 || >=7.0.0 || >=8.0.0"
   }
 }
