--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "eslint": "^7.32.0",
     "lerna": "^4.0.0",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "@antfu/eslint-config": "^0.15.0"
   }
 }
