[fix]Fix TS conflicts

--- a/packages/eslint-config-vue3/package.json
+++ b/packages/eslint-config-vue3/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vividcat/eslint-config-vue3",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.1",
   "author": "vividcat",
   "license": "MIT",
   "main": "index.js",
