--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-  "version": "3.0.3",
+  "version": "3.1.0",
   "private": true,
-  "packageManager": "pnpm@7.3.0",
+  "packageManager": "pnpm@8.5.1",
   "scripts": {
     "lint": "eslint .",
-    "preinstall": "npx only-allow pnpm",
-    "release": "pnpm -r publish --no-git-checks",
+    "release": "bumpp && pnpm -r publish --no-git-checks",
+    "version": "bumpp",
     "up": "taze major -I",
-    "up:all": "pnpm run -r --parallel up"
+    "up:pkg": "pnpm run -r --parallel up"
   },
   "devDependencies": {
     "@vividcat/eslint-config": "workspace:*",
-    "bumpp": "^8.2.1",
-    "eslint": "^8.30.0",
-    "taze": "^0.8.5",
-    "typescript": "^4.9.4"
+    "bumpp": "^9.2.0",
+    "eslint": "^8.48.0",
+    "taze": "^0.11.2"
+  },
+  "engines": {
+    "node": ">=16.17.0"
+  },
+  "eslintConfig": {
+    "extends": "@vividcat",
+    "ignorePatterns": [
+      "fixtrue"
+    ]
   }
 }
-
