--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "packageManager": "pnpm@8.5.1",
   "scripts": {
     "lint": "eslint .",
-    "release": "bumpp && pnpm -r publish --no-git-checks",
+    "release": "pnpm -r publish --no-git-checks",
     "version": "bumpp",
     "up": "taze major -I",
     "up:pkg": "pnpm run -r --parallel up"
