--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vividcat/eslint-config",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "author": "hezulong1<https://github.com/hezulong1>",
   "license": "MIT",
   "main": "index.js",
@@ -13,7 +13,7 @@
     "url": "https://github.com/vividcat/broom.git"
   },
   "dependencies": {
-    "@antfu/eslint-config": "latest"
+    "@antfu/eslint-config": "0.43.1"
   },
   "keywords": [
     "vividcat"
